Roster Proof of concept complete

--- a/roster.html
+++ b/roster.html
@@ -54,14 +54,18 @@
                         <h1 class="name">Name</h1>
                     </div>
                     <div class="profile-body">
-                        <ul class="details">
-                            <li class="position">Position: ###</li>
-                            <li class="year">School/Year: ###</li>
-                            <li class="height/weight">Height/Weight: ###</li>
-                            <li class="hometown">Hometown: ###<li>
-                            <li class="birthday">Birthday: ###</li>
-                            <li class="comparison">Player Comparison: ###</li>
-                        </ul>
+                        <table class="details">
+                            <tr>
+                                <td class="position">Position: ###</td>
+                                <td class="year">School/Year: ###</td>
+                                <td class="hometown">Hometown: ###</td>
+                            </tr>
+                            <tr>
+                                <td class="height/weight">Height/Weight: ###</td>
+                                <td class="birthday">Birthday: ###</td>
+                                <td class="comparison">Player Comparison: ###</td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
             </div>
