Roster organized as grid

--- a/roster.html
+++ b/roster.html
@@ -46,26 +46,96 @@
         <!--Hero Section-->
         <main>
             <div class="roster__container">
-                <div class="image-container">
-                    <img src="images/logo.png" alt="Player Image">
-                </div>
-                <div class="profile__container">
-                    <div class="profile-header">
-                        <h1 class="name">Name</h1>
+                <div class="card__container">
+                    <div class="image-container">
+                        <img src="images/logo.png" alt="Player Image">
                     </div>
-                    <div class="profile-body">
-                        <table class="details">
-                            <tr>
-                                <td class="position">Position: ###</td>
-                                <td class="year">School/Year: ###</td>
-                                <td class="hometown">Hometown: ###</td>
-                            </tr>
-                            <tr>
-                                <td class="height/weight">Height/Weight: ###</td>
-                                <td class="birthday">Birthday: ###</td>
-                                <td class="comparison">Player Comparison: ###</td>
-                            </tr>
-                        </table>
+                    <div class="profile__container">
+                        <div class="profile-header">
+                            <h1 class="name">Name</h1>
+                        </div>
+                        <div class="profile-body">
+                            <table class="details">
+                                <tr>
+                                    <td class="position">Position: ###</td>
+                                    <td class="year">School/Year: ###</td>
+                                    <td class="hometown">Hometown: ###</td>
+                                </tr>
+                                <tr>
+                                    <td class="height/weight">Height/Weight: ###</td>
+                                    <td class="birthday">Birthday: ###</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="card__container">
+                    <div class="image-container">
+                        <img src="images/logo.png" alt="Player Image">
+                    </div>
+                    <div class="profile__container">
+                        <div class="profile-header">
+                            <h1 class="name">Name</h1>
+                        </div>
+                        <div class="profile-body">
+                            <table class="details">
+                                <tr>
+                                    <td class="position">Position: ###</td>
+                                    <td class="year">School/Year: ###</td>
+                                    <td class="hometown">Hometown: ###</td>
+                                </tr>
+                                <tr>
+                                    <td class="height/weight">Height/Weight: ###</td>
+                                    <td class="birthday">Birthday: ###</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="card__container">
+                    <div class="image-container">
+                        <img src="images/logo.png" alt="Player Image">
+                    </div>
+                    <div class="profile__container">
+                        <div class="profile-header">
+                            <h1 class="name">Name</h1>
+                        </div>
+                        <div class="profile-body">
+                            <table class="details">
+                                <tr>
+                                    <td class="position">Position: ###</td>
+                                    <td class="year">School/Year: ###</td>
+                                    <td class="hometown">Hometown: ###</td>
+                                </tr>
+                                <tr>
+                                    <td class="height/weight">Height/Weight: ###</td>
+                                    <td class="birthday">Birthday: ###</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="card__container">
+                    <div class="image-container">
+                        <img src="images/logo.png" alt="Player Image">
+                    </div>
+                    <div class="profile__container">
+                        <div class="profile-header">
+                            <h1 class="name">Name</h1>
+                        </div>
+                        <div class="profile-body">
+                            <table class="details">
+                                <tr>
+                                    <td class="position">Position: ###</td>
+                                    <td class="year">School/Year: ###</td>
+                                    <td class="hometown">Hometown: ###</td>
+                                </tr>
+                                <tr>
+                                    <td class="height/weight">Height/Weight: ###</td>
+                                    <td class="birthday">Birthday: ###</td>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
