--- a/watch.html
+++ b/watch.html
@@ -26,9 +26,6 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links">Join</a>    
-                </li>
-                <li class="navbar__item">
                     <a href="/" class="navbar__links">Home</a>
                 </li>
                 <li class="navbar__item">
@@ -37,8 +34,11 @@
                 <li class="navbar__item">
                     <a href="roster.html" class="navbar__links">Roster</a>
                 </li>
+                <li class="navbar__item">
+                    <a href="watch.html" class="navbar__links">Watch</a>    
+                </li>
                 <li class="navbar__btn">
-                    <a href="watch.html" class="button">Watch GURFC</a>
+                    <a href="watch.html" class="button">Join GURFC</a>
                 </li>
             </ul>
         </div>
