Headers for about/roster sections fixed

--- a/roster.html
+++ b/roster.html
@@ -47,7 +47,7 @@
         <!--Hero Section-->
         <main>
             <div class="roster__header">
-                <img src="images/P1.jpg">
+                <h1>GURFC Roster</h1>
             </div>
             <div class="roster__container">
                 <div class="card__container">
