navbar update, roster changes

--- a/roster.html
+++ b/roster.html
@@ -14,40 +14,42 @@
         <!--navigation bar-->
         <nav class="navbar">
             <div class="navbar__container">
-                <a href="/" id="navbar__logo">
-                    <img src="images/logo.png"
-                    width="80"
-                    height="80">
-                </a>
+                <div class="navbar__wide">
+                    <div class="navbar__btn">
+                        <a href="watch.html" class="button">Join GURFC</a>
+                    </div>
+                    <a href="/" id="navbar__logo">
+                        <img src="images/logo.png"
+                        width="80"
+                        height="80">
+                    </a>
+                    <ul class="navbar__menu">
+                        <li class="navbar__item">
+                            <a href="shop.html" class="navbar__links">Shop</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a href="about.html" class="navbar__links">About</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a href="roster.html" class="navbar__links">Roster</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a href="watch.html" class="navbar__links">Watch</a>    
+                        </li>
+                    </ul>
+                </div>
                 <div class="navbar__toggle" id="mobile-menu">
                     <br>
                     <span class="bar"></span>
                     <span class="bar"></span>
                     <span class="bar"></span>
                 </div>
-                <ul class="navbar__menu">
-                    <li class="navbar__item">
-                        <a href="/" class="navbar__links">Home</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a href="about.html" class="navbar__links">About</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a href="roster.html" class="navbar__links">Roster</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a href="watch.html" class="navbar__links">Watch</a>    
-                    </li>
-                    <li class="navbar__btn">
-                        <a href="watch.html" class="button">Join GURFC</a>
-                    </li>
-                </ul>
             </div>
         </nav>
         <!--Hero Section-->
         <main>
             <div class="roster__header">
-                <h1>GURFC Roster</h1>
+                <h1>Roster</h1>
             </div>
             <div class="roster__container">
                 <div class="card__container">
@@ -56,18 +58,18 @@
                     </div>
                     <div class="profile__container">
                         <div class="profile-header">
-                            <h1 class="name">Name</h1>
+                            <h1 class="name">Brodie Lee</h1>
                         </div>
                         <div class="profile-body">
                             <table class="details">
                                 <tr>
-                                    <td class="position">Position: ###</td>
-                                    <td class="year">School/Year: ###</td>
-                                    <td class="hometown">Hometown: ###</td>
+                                    <td class="position">Position: <b>Lock</b></td>
+                                    <td class="year">School/Year: <b>CAS '26</b></td>
+                                    <td class="hometown">Hometown: <b>Brookline, MA</b></td>
                                 </tr>
                                 <tr>
-                                    <td class="height/weight">Height/Weight: ###</td>
-                                    <td class="birthday">Birthday: ###</td>
+                                    <td class="height/weight">Ht/Wt: <b>6ft/180lbs</b></td>
+                                    <td class="birthday">Birthday: <b>08/13/2003</b></td>
                                 </tr>
                             </table>
                         </div>
