--- a/watch.html
+++ b/watch.html
@@ -14,34 +14,36 @@
     <!--navigation bar-->
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo">
-                <img src="images/logo.png"
-                width="80"
-                height="80">
-            </a>
+            <div class="navbar__wide">
+                <div class="navbar__btn">
+                    <a href="watch.html" class="button">Join GURFC</a>
+                </div>
+                <a href="/" id="navbar__logo">
+                    <img src="images/logo.png"
+                    width="80"
+                    height="80">
+                </a>
+                <ul class="navbar__menu">
+                    <li class="navbar__item">
+                        <a href="shop.html" class="navbar__links">Shop</a>
+                    </li>
+                    <li class="navbar__item">
+                        <a href="about.html" class="navbar__links">About</a>
+                    </li>
+                    <li class="navbar__item">
+                        <a href="roster.html" class="navbar__links">Roster</a>
+                    </li>
+                    <li class="navbar__item">
+                        <a href="watch.html" class="navbar__links">Watch</a>    
+                    </li>
+                </ul>
+            </div>
             <div class="navbar__toggle" id="mobile-menu">
                 <br>
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
-            <ul class="navbar__menu">
-                <li class="navbar__item">
-                    <a href="/" class="navbar__links">Home</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="about.html" class="navbar__links">About</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="roster.html" class="navbar__links">Roster</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="watch.html" class="navbar__links">Watch</a>    
-                </li>
-                <li class="navbar__btn">
-                    <a href="watch.html" class="button">Join GURFC</a>
-                </li>
-            </ul>
         </div>
     </nav>
     <main>
