--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width>, initial-scale=1.0">
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/2601b20e92.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,13 +23,13 @@
                         <a href="shop.html" class="navbar__links">Shop</a>
                     </li>
                     <li class="navbar__item">
-                        <a href="about.html" class="navbar__links">About</a>
+                        <a href="us.html" class="navbar__links">About</a>
                     </li>
                     <li class="navbar__item">
                         <a href="roster.html" class="navbar__links">Roster</a>
                     </li>
                     <li class="navbar__item">
-                        <a href="watch.html" class="navbar__links">Watch</a>    
+                        <a href="match.html" class="navbar__links">Watch</a>    
                     </li>
                     <li class="navbar__btn">
                         <a href="watch.html" class="button">Join GURFC</a>
@@ -44,14 +44,5 @@
             </div>
         </div>
     </nav>
-    <main>
-        <div class="watch">
-            <div class="watch__container">
-                <div class="watch__body">
-                    <div class="watch__video">
-                        <h1>Georgetown vs. IUP</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
+</body>
+</html>
