--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width>, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/2601b20e92.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,13 +15,8 @@
     <nav class="navbar">
         <div class="navbar__container">
             <div class="navbar__wide">
-                <div class="navbar__btn">
-                    <a href="watch.html" class="button">Join GURFC</a>
-                </div>
                 <a href="/" id="navbar__logo">
-                    <img src="images/logo.png"
-                    width="80"
-                    height="80">
+                    <img src="images/logo.png" width="80" height="80">
                 </a>
                 <ul class="navbar__menu">
                     <li class="navbar__item">
@@ -35,6 +30,9 @@
                     </li>
                     <li class="navbar__item">
                         <a href="watch.html" class="navbar__links">Watch</a>    
+                    </li>
+                    <li class="navbar__btn">
+                        <a href="watch.html" class="button">Join GURFC</a>
                     </li>
                 </ul>
             </div>
