--- a/roster.html
+++ b/roster.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width>, initial-scale=1.0">
         <title>Document</title>
         <script src="https://kit.fontawesome.com/2601b20e92.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,26 +15,24 @@
         <nav class="navbar">
             <div class="navbar__container">
                 <div class="navbar__wide">
-                    <div class="navbar__btn">
-                        <a href="watch.html" class="button">Join GURFC</a>
-                    </div>
                     <a href="/" id="navbar__logo">
-                        <img src="images/logo.png"
-                        width="80"
-                        height="80">
+                        <img src="images/logo.png" width="80" height="80">
                     </a>
                     <ul class="navbar__menu">
                         <li class="navbar__item">
                             <a href="shop.html" class="navbar__links">Shop</a>
                         </li>
                         <li class="navbar__item">
-                            <a href="about.html" class="navbar__links">About</a>
+                            <a href="us.html" class="navbar__links">About</a>
                         </li>
                         <li class="navbar__item">
                             <a href="roster.html" class="navbar__links">Roster</a>
                         </li>
                         <li class="navbar__item">
-                            <a href="watch.html" class="navbar__links">Watch</a>    
+                            <a href="match.html" class="navbar__links">Watch</a>    
+                        </li>
+                        <li class="navbar__btn">
+                            <a href="watch.html" class="button">Join GURFC</a>
                         </li>
                     </ul>
                 </div>
@@ -75,75 +73,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__container">
-                    <div class="image-container">
-                        <img src="images/logo.png" alt="Player Image">
-                    </div>
-                    <div class="profile__container">
-                        <div class="profile-header">
-                            <h1 class="name">Name</h1>
-                        </div>
-                        <div class="profile-body">
-                            <table class="details">
-                                <tr>
-                                    <td class="position">Position: ###</td>
-                                    <td class="year">School/Year: ###</td>
-                                    <td class="hometown">Hometown: ###</td>
-                                </tr>
-                                <tr>
-                                    <td class="height/weight">Height/Weight: ###</td>
-                                    <td class="birthday">Birthday: ###</td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-                <div class="card__container">
-                    <div class="image-container">
-                        <img src="images/logo.png" alt="Player Image">
-                    </div>
-                    <div class="profile__container">
-                        <div class="profile-header">
-                            <h1 class="name">Name</h1>
-                        </div>
-                        <div class="profile-body">
-                            <table class="details">
-                                <tr>
-                                    <td class="position">Position: ###</td>
-                                    <td class="year">School/Year: ###</td>
-                                    <td class="hometown">Hometown: ###</td>
-                                </tr>
-                                <tr>
-                                    <td class="height/weight">Height/Weight: ###</td>
-                                    <td class="birthday">Birthday: ###</td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-                <div class="card__container">
-                    <div class="image-container">
-                        <img src="images/logo.png" alt="Player Image">
-                    </div>
-                    <div class="profile__container">
-                        <div class="profile-header">
-                            <h1 class="name">Name</h1>
-                        </div>
-                        <div class="profile-body">
-                            <table class="details">
-                                <tr>
-                                    <td class="position">Position: ###</td>
-                                    <td class="year">School/Year: ###</td>
-                                    <td class="hometown">Hometown: ###</td>
-                                </tr>
-                                <tr>
-                                    <td class="height/weight">Height/Weight: ###</td>
-                                    <td class="birthday">Birthday: ###</td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
+            </div>
+            <div>
+                <!--javascript-->
             </div>
         </main>
         <!--Footer-->
