--- a/us.html
+++ b/us.html
@@ -3,8 +3,8 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width= device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us</title>
     <script src="https://kit.fontawesome.com/2601b20e92.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,44 +44,28 @@
             </div>
         </div>
     </nav>
-    <!-- Hero Section -->
-    <div class="main">
-       <div class="main__container">
-            <div class="main__content">
-                <br>
-                <br>
-                <h1>Georgetown University Rugby Football Club</h1>
-                <h2>Est. 1967</h2>
-            </div>
-            <button class="main__btn"><a href="match.html">Watch Now</a></button>
-       </div> 
-    </div>
-    <!---About Section-->
-    <div class="main2">
-        <div class="main2__container">
-            <div class="main2__content">
-                <h1>About the Team</h1>
-                <br>
-                <p>The Georgetown University Rugby Football Club (GURFC) was founded in 1967 to give undergraduate and graduate students the opportunity to learn and play rugby. </p>
-                <br>
-                <br>
-                <p>Practice is hosted on Cooper Field from 7pm-9pm every Tuesday and Thursday.</p>
-                <br>
-                <br>
-                <h2>Picture: 2023 15s MARC Championship</h2>
-                </div>
-            <div class="main2__img">
-                <img src="images/P2.jpg" id="img2">
-                </div>
+    <!-- About Section -->
+        <div class="about__header">
+            <h1>About Us</h1>
         </div>
-    </div>
+        <div class="about__main">
+            <div>
+                    <div class="about__content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tincidunt arcu vel arcu fermentum, eget auctor nisi iaculis. Suspendisse potenti.</p>
+                        <br>
+                        <br>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat ex eget dui fermentum, ut dictum quam consequat.</p>
+                    </div>
+                    <iframe width="800" height="450" src="https://www.youtube.com/embed/M8ItVtysA5o?si=OM4Yzymn_uKCERls" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div> 
+        </div>
     <!--Footer Section-->
     <div class="footer__container">
         <div class="footer__logo">
                 <a href="/" id="footer__logo">
                         <img src="images/logo.png"
-                        width="100"
-                        height="100">
+                        width="80"
+                        height="80">
                  </a>
                  <p>©2024 All rights reserved</p>
         </div>
