julian website changes

--- a/index.html
+++ b/index.html
@@ -56,13 +56,14 @@
             <button class="main__btn"><a href="match.html">Watch Now</a></button>
        </div> 
     </div>
+    <!--Proven Success Section-->
     <!---About Section-->
     <div class="main2">
         <div class="main2__container">
             <div class="main2__content">
-                <h1>About the Team</h1>
+                <h1>Who are we?</h1>
                 <br>
-                <p>The Georgetown University Rugby Football Club (GURFC) was founded in 1967 to give undergraduate and graduate students the opportunity to learn and play rugby. </p>
+                <p>Founded in 1967, Georgetown University Rugby Football Club has consistently competed at the highest levels of collegiate rugby. The team competes in the Mid-Atlantic Rugby Conference in Division II of National Collegiate Rugby. GURFC's winning culture is stronger than ever thanks to our coaches and active alumni network.</p>
                 <br>
                 <br>
                 <p>Practice is hosted on Cooper Field from 7pm-9pm every Tuesday and Thursday.</p>
