--- a/roster.html
+++ b/roster.html
@@ -62,7 +62,7 @@
                             <table class="details">
                                 <tr>
                                     <td class="position">Position: <b>Lock</b></td>
-                                    <td class="year">School/Year: <b>CAS '26</b></td>
+                                    <td class="year">School/Year: <b>CAS Jr.</b></td>
                                     <td class="hometown">Hometown: <b>Brookline, MA</b></td>
                                 </tr>
                                 <tr>
