--- a/match.html
+++ b/match.html
@@ -32,7 +32,7 @@
                         <a href="match.html" class="navbar__links">Watch</a>    
                     </li>
                     <li class="navbar__btn">
-                        <a href="watch.html" class="button">Join GURFC</a>
+                        <a href="join.html" class="button">Join GURFC</a>
                     </li>
                 </ul>
             </div>
@@ -45,20 +45,102 @@
         </div>
     </nav>
     <!-- Watch Section -->
-    <div class="about__header">
-        <h1>Watch GURFC</h1>
-    </div>
-    <div class="about__main">
-        <div>
-                <div class="about__content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tincidunt arcu vel arcu fermentum, eget auctor nisi iaculis. Suspendisse potenti.</p>
-                    <br>
-                    <br>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat ex eget dui fermentum, ut dictum quam consequat.</p>
+        <div class="watch__container">
+            <div class="shape">
+                <div class="watch__header">
+                    <h1>Watch GURFC</h1>
+                    <h2>Next Match:</h2>
+                    <div class="score-table">
+                        <div></div>
+                        <div class="GURFC-card">
+                            <img src="images/GURFClogo.jpg" id="watch-logo">
+                        </div>
+                        <h2>vs.</h2>
+                        <div class="opponent-card">
+                        </div>
+                        <div></div>
+                    </div>
                 </div>
-                <iframe width="800" height="450" src="https://www.youtube.com/embed/M8ItVtysA5o?si=OM4Yzymn_uKCERls" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div> 
-    </div>
+            </div>
+            <div class="watch__container2">
+                <div class="watch__main">
+                        <div class="watch__video">
+                            <h1>Results</h1>
+                            <table class="score-box">
+                                <thead>
+                                <tr>
+                                    <th>Opponent</th>
+                                    <th>Result</th>
+                                    <th>Location</th>
+                                    <th>Date</th>
+                                    <th>Watch</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>Villanova</td>
+                                    <td>W 48-37</td>
+                                    <td>Alapocas Run State Park</td>
+                                    <td>11/4/2023</td>
+                                    <td>Georgetown vs. Villanova</td>
+                                </tr>
+                                <tr class="active-row">
+                                    <td>Scranton</td>
+                                    <td>W 50-22</td>
+                                    <td>North Bay Rugby Club</td>
+                                    <td>10/28/2023</td>
+                                    <td>Georgetown vs. Scranton</td>
+                                </tr>
+                                <tr>
+                                    <td>Shippensburg</td>
+                                    <td>W 28-0</td>
+                                    <td>@ Shippensburg</td>
+                                    <td>10/21/2023</td>
+                                    <td>Shippensburg vs. Georgetown</td>
+                                </tr>
+                                <tr>
+                                    <td>Drexel</td>
+                                    <td>W 28-0</td>
+                                    <td>Cooper Field</td>
+                                    <td>10/14/2023</td>
+                                    <td>Unavailable</td>
+                                </tr>
+                                <tr>
+                                    <td>Towson</td>
+                                    <td>W 47-0</td>
+                                    <td>@ Towson</td>
+                                    <td>10/7/2023</td>
+                                    <td>Unavailable</td>
+                                </tr>
+                                <tr>
+                                    <td>Mount C</td>
+                                    <td>W 78-10</td>
+                                    <td>@ Mount</td>
+                                    <td>9/23/2023</td>
+                                    <td>Unavailable</td>
+                                </tr>
+                                <tr>
+                                    <td>UMBC</td>
+                                    <td>W 78-10</td>
+                                    <td>Cooper Field</td>
+                                    <td>9/16/2023</td>
+                                    <td>Unavailable</td>
+                                </tr>
+                                <tr>
+                                    <td>York</td>
+                                    <td>W 28-0</td>
+                                    <td>@ York</td>
+                                    <td>9/9/2023</td>
+                                    <td>Unavailable</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                <div class="youtube">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/mCCw3i3kI4A?si=mXqDvqglqzNDxq1U&amp;start=844" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                </div>
+            </div>
+        </div>
     <!--Footer Section-->
     <div class="footer__container">
         <div class="footer__logo">
