--- a/watch.html
+++ b/watch.html
@@ -45,8 +45,9 @@
         </div>
     </nav>
     <!-- About Section -->
-        <div class="about__header">
-            <h1>Join GURFC</h1>
+        <div class="shop-header">
+            <h1>Join</h1>
+            <h2>GURFC</h2>
         </div>
         <div class="about__main">
             <div class="about__container">
